# trajectory_annotation_tool

./: CMakeLists.txt  package.xml
scripts/: annotation_tool.py
